--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  padding: 0;
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: lightgray;
+  border-radius: 100vw;
+  margin-block: .3em;
+}
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 100vw;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: gray;
+}
