--- a/src/pages/admin/CustomerDetail/style.scss
+++ b/src/pages/admin/CustomerDetail/style.scss
@@ -1,15 +1,72 @@
 .customer-detail {
-  &__form {
-
+  padding: 50px;
+  border-radius: 16px;
+  background-color: #fff;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  &__title {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 32px !important;
+    margin: 0 0 30px 0 !important;
   }
   &__row {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
+  &__item {
+    margin: 0 0 15px 0;
+    p {
+      font-weight: 500;
+      margin: 0 0 10px 0;
+    }
+  }
   &__bottom {
     margin: 10px 0 0 0;
     display: flex;
     justify-content: end;
+    &--back {
+      margin: 0 20px 0 0;
+      width: 150px;
+      height: 45px;
+      border: 1px solid;
+      border-image-slice: 1;
+      border-image-source: linear-gradient(
+        to right bottom, #6a5af9, #f62682
+      );
+      transition: all 0.5s ease-in-out;
+      border-radius: 0;
+      &:hover {
+        color: #fff !important;
+        background: linear-gradient(
+          to right, #227df9, #7462f9, #df3ef8
+        );
+      }
+    }
+    &--update {
+      background-image: linear-gradient(
+        to right,
+        #fc00ff 0%,
+        #00dbde 51%,
+        #fc00ff 100%
+      );
+      text-align: center;
+      text-transform: uppercase;
+      transition: 0.5s;
+      background-size: 200% auto;
+      color: white;
+      box-shadow: 0 0 20px #eee;
+      border-radius: 0;
+      display: block;
+      height: 45px;
+      line-height: 25px;
+      padding: 10px 25px;
+      &:hover {
+        background-position: right center;
+        color: #fff !important;
+        text-decoration: none;
+      }
+    }
   }
 }
