--- a/src/components/AdminProduct/style.scss
+++ b/src/components/AdminProduct/style.scss
@@ -12,6 +12,7 @@
   }
   &__image {
     width: 100%;
+    margin: 0 0 20px 0;
     &__head {
       display: flex;
       justify-content: space-between;
