--- a/src/components/AdminProduct/style.scss
+++ b/src/components/AdminProduct/style.scss
@@ -1,4 +1,7 @@
 .add-product {
+  max-height: 600px;
+  overflow-y: auto;
+  padding: 20px 10px 0;
   &__row {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
