[update] add UI list product

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $bodyBg: #fff;
 $mainBg: #fff;
 $mainColor: #8624DB;
-$txtColor: #4E4D4F;
+$txtColor: #444;
 $purple: #8624DB;
 $orange: #FF9066;
 $white: #fff;
@@ -11,6 +11,7 @@ $red: #ff1000;
 $dark-red: #e3291c;
 $light-orange: #ff8609;
 $dark-gray: #2a2a2a;
+$light-gray: #f3f4f6;
 
 $fontFamily: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
