[update] update ui home page

--- a/src/components/CardItem/style.scss
+++ b/src/components/CardItem/style.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   &:hover {
-    transform: translateY(-10px);
+    transform: scale(1.05);
   }
   &__top {
     display: flex;
