--- a/src/templates/client/style.scss
+++ b/src/templates/client/style.scss
@@ -3,4 +3,20 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+  &__back-to-top {
+    position: fixed;
+    right: 5%;
+    bottom: 7%;
+    background: #2087ed;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    padding: 0;
+    border: none;
+    border-radius: 50%;
+    &:hover {
+      color: #fff !important;
+    }
+  }
 }
