--- a/src/components/AdviseContact/style.scss
+++ b/src/components/AdviseContact/style.scss
@@ -1,3 +1,4 @@
+@use "../../scss/abstracts/" as *;
 .advise-contact {
   width: 100%;
   height: 600px;
@@ -7,6 +8,9 @@
     rgb(191, 0, 255) 100%
   );
   position: relative;
+  @include mobile {
+    height: 500px;
+  }
   &::before {
     content: "";
     position: absolute;
@@ -19,6 +23,19 @@
       rgba(255, 255, 255, 0) 0%,
       rgba(0, 0, 0, 0.877) 100%
     );
+    @include mobile {
+      height: 500px;
+    }
+  }
+  &__animate {
+    img {
+      @include tablet {
+        width: 150px;
+      }
+      @include mobile {
+        display: none;
+      }
+    } 
   }
   &__beauty {
     position: absolute;
@@ -26,6 +43,12 @@
     left: 35%;
     border-radius: 8px;
     transform: rotate3d(1, 1, -10, 12deg);
+    @include normal-desktop {
+      width: 200px;
+    }
+    @include mini-desktop {
+      display: none;
+    }
   }
   &__right {
     width: 450px;
@@ -37,5 +60,73 @@
     transform: translate(5%, -50%);
     border-radius: 16px;
     padding: 24px;
+    @include normal-desktop {
+      right: 10%;
+    }
+    @include mini-desktop {
+      right: 11%;
+      width: 400px;
+    }
+    @include mobile {
+      width: 350px;
+      height: 430px;
+      right: 50%;
+      transform: translate(50%, -50%);
+      padding: 24px 16px;
+    }
+    @include mini-mobile {
+      width: 300px;
+      padding: 16px 8px;
+    }
+    h4 {
+      text-align: center;
+      font-size: 30px;
+      font-weight: 700;
+      margin: 0 0 20px;
+      @include mobile {
+        font-size: 26px;
+        margin: 0 0 15px;
+      }
+    }
+    &--input {
+      margin: 0 0 15px;
+      height: 40px;
+    }
+    &--textarea {
+      @include mobile {
+        height: 100px !important;
+      }
+    }
+    &--register {
+      width: 100%;
+      height: 55px;
+      color: $white;
+      text-transform: uppercase;
+      font-weight: 700;
+      letter-spacing: 1px;
+      border-radius: 0;
+      margin: 20px 0 0;
+      font-size: 18px;
+      border: none;
+      background-size: 250% auto;
+      background-image: linear-gradient(
+        to left,
+        #227df9 0%,
+        #7462f9 25%,
+        #df3ef8 50%,
+        #7462f9 75%,
+        #227df9 100%
+      );
+      transition: all 0.5s ease;
+      transition-timing-function: ease, ease;
+      @include mobile {
+        height: 50px;
+        font-size: 16px;
+      }
+      &:hover {
+        color: $white !important;
+        background-position: right center;
+      }
+    }
   }
 }
