--- a/src/components/SwiperHome/style.scss
+++ b/src/components/SwiperHome/style.scss
@@ -29,6 +29,7 @@
     }
     @include mobile {
       height: 200px;
+      object-fit: cover;
     }
   }
   .swiper-button-prev, .swiper-button-next {
