--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,5 +1,10 @@
 @use "./variables" as *;
 
+@mixin mini-mobile {
+  @media only screen and (max-width: $mini-mobile-width) {
+    @content;
+  }
+}
 @mixin mobile {
   @media only screen and (max-width: $mobile-width) {
     @content;
