--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -27,6 +27,7 @@ $spacing: 48px;
 $mobileSpacing: 24px;
 $borderRadius: 30px;
 
+$mini-mobile-width: 375px;
 $mobile-width: 425px;
 $tablet-width: 768px;
 $mini-desktop-width: 1024px;
