--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -31,4 +31,5 @@ $mini-mobile-width: 375px;
 $mobile-width: 425px;
 $tablet-width: 768px;
 $mini-desktop-width: 1024px;
-$normal-desktop-width: 1600px;
+$normal-desktop-width: 1200px;
+$large-desktop-width: 1440px;
