--- a/src/components/CardItem/style.scss
+++ b/src/components/CardItem/style.scss
@@ -1,7 +1,7 @@
 @use "../../scss/abstracts/" as *;
 .card-item {
-  width: 229px;
-  height: 430px;
+  width: auto;
+  height: auto;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.1),
     0 2px 6px 2px rgba(60, 64, 67, 0.15);
   border-radius: 16px;
@@ -17,6 +17,10 @@
       width: 160px;
       height: 160px;
       margin: 10px 0 0;
+      @include mobile {
+        width: 120px;
+        height: 120px;
+      }
     }
   }
   &__info {
@@ -43,8 +47,10 @@
     }
     &--rating {
       margin: 10px 0 0;
-      img {
+      i {
         margin: 0 2px 0 0;
+        font-size: 14px;
+        color: $light-orange;
       }
     }
     &--favorite {
