--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -14,11 +14,11 @@
       column-gap: 10px;
       grid-template-columns: repeat(4, 1fr);
     }
-    @include mini-desktop {
-      column-gap: 20px;
-      row-gap: 30px;
-      grid-template-columns: repeat(2, 1fr);
-    }
+    // @include mini-desktop {
+    //   column-gap: 20px;
+    //   row-gap: 30px;
+    //   grid-template-columns: repeat(2, 1fr);
+    // }
     @include mobile {
       grid-template-columns: repeat(1, 1fr);
       padding: 0 5%;
