--- a/src/components/IntroBanner/style.scss
+++ b/src/components/IntroBanner/style.scss
@@ -1,32 +1,29 @@
 @use "../../scss/abstracts/" as *;
 .intro-banner {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 25px;
-  padding: 10px 0;
-  @include mini-desktop {
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 20px;
-  }
-  @include mobile {
-    gap: 10px;
+  display: flex;
+  gap: 15px;
+  overflow-x: auto;
+  margin: 20px 0 0;
+  &::-webkit-scrollbar {
+    display: none;
   }
   img {
     width: 330px;
+    height: 200px;
+    object-fit: fill;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+    }
     @include normal-desktop {
       width: 275px;
+      height: 170px;
     }
     @include mini-desktop {
-      width: 400px;
-    }
-    @include tablet {
-      width: 320px;
-    }
-    @include mobile {
-      width: 180px;
-    }
-    @include mini-mobile {
-      width: 150px;
+      width: 230px;
+      height: 160px;
     }
   }
 }
