--- a/src/components/SwiperHome/style.scss
+++ b/src/components/SwiperHome/style.scss
@@ -5,9 +5,9 @@
   @include normal-desktop {
     height: 500px;
   }
-  @include mini-desktop {
-    height: 450px;
-  }
+  // @include mini-desktop {
+  //   height: 450px;
+  // }
   @include tablet {
     height: 400px;
   }
@@ -21,9 +21,9 @@
     @include normal-desktop {
       height: 500px;
     }
-    @include mini-desktop {
-      height: 450px;
-    }
+    // @include mini-desktop {
+    //   height: 450px;
+    // }
     @include tablet {
       height: 400px;
     }
