--- a/src/pages/client/AboutUs/style.scss
+++ b/src/pages/client/AboutUs/style.scss
@@ -11,12 +11,12 @@
     height: 500px;
     width: 1150px;
   }
-  @include mini-desktop {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    height: auto;
-    width: 800px;
-  }
+  // @include mini-desktop {
+  //   display: grid;
+  //   grid-template-columns: repeat(1, 1fr);
+  //   height: auto;
+  //   width: 800px;
+  // }
   @include tablet {
     width: 700px;
   }
@@ -28,9 +28,9 @@
   }
   &__left {
     width: 60%;
-    @include mini-desktop {
-      width: 100%;
-    }
+    // @include mini-desktop {
+    //   width: 100%;
+    // }
     h4 {
       font-size: 24px;
       @include mobile {
@@ -89,11 +89,11 @@
   }
   &__right {
     width: 40%;
-    @include mini-desktop {
-      width: 100%;
-      height: 300px;
-      margin: 30px 0 0;
-    }
+    // @include mini-desktop {
+    //   width: 100%;
+    //   height: 300px;
+    //   margin: 30px 0 0;
+    // }
     iframe {
       width: 100%;
       height: 100%;
