--- a/src/pages/client/Home/style.scss
+++ b/src/pages/client/Home/style.scss
@@ -1,25 +1,28 @@
 @use "../../../scss/abstracts/" as *;
 .home {
   &__container {
-    width: 1400px;
+    width: 1500px;
     margin: auto;
     padding: 10px;
     overflow: hidden;
+    @include large-desktop {
+      width: 1400px;
+    }
     @include normal-desktop {
-      width: 1200px;
+      width: 1150px;
+      padding: 0;
     }
     @include mini-desktop {
-      width: 850px;
+      width: 100%;
+      padding: 0 25px;
     }
     @include tablet {
-      width: 680px;
+      width: 100%;
+      padding: 0 20px;
     }
     @include mobile {
-      width: 370px;
-      padding: 10px 0;
-    }
-    @include mini-mobile {
-      width: 300px;
+      width: 100%;
+      padding: 0 10px;
     }
   }
 }
@@ -34,6 +37,9 @@
       font-size: 28px;
       letter-spacing: 1px;
       color: $txtColor;
+      @include tablet {
+        font-size: 24px;
+      }
       @include mobile {
         font-size: 24px;
       }
@@ -57,6 +63,12 @@
   &__list {
     height: 480px;
     padding: 20px 10px !important;
+    @include tablet {
+      height: 450px;
+    }
+    @include mobile {
+      height: 410px;
+    }
   }
 }
 
@@ -68,11 +80,20 @@
     @include mini-desktop {
       display: grid;
     }
+    @include tablet {
+      display: grid;
+    }
+    @include mobile {
+      display: grid;
+    }
     h4 {
       text-transform: uppercase;
       font-size: 28px;
       letter-spacing: 1px;
       color: $txtColor;
+      @include tablet {
+        font-size: 24px;
+      }
       @include mobile {
         font-size: 24px;
       }
@@ -81,6 +102,12 @@
       display: grid;
       grid-template-columns: repeat(9, 1fr);
       column-gap: 10px;
+      @include tablet {
+        overflow-x: auto;
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
       @include mobile {
         overflow-x: auto;
         &::-webkit-scrollbar {
@@ -107,5 +134,11 @@
   &__list {
     height: 480px;
     padding: 20px 10px !important;
+    @include tablet {
+      height: 450px;
+    }
+    @include mobile {
+      height: 410px;
+    }
   }
 }
