--- a/src/pages/client/ListProduct/style.scss
+++ b/src/pages/client/ListProduct/style.scss
@@ -2,11 +2,23 @@
 .list-product {
   width: 1500px;
   margin: auto;
+  @include large-desktop {
+    width: 1400px;
+  }
   @include normal-desktop {
-    width: 1300px;
+    width: 1150px;
   }
   @include mini-desktop {
-    width: 900px;
+    width: 100%;
+    padding: 0 25px;
+  }
+  @include tablet {
+    width: 100%;
+    padding: 0 20px;
+  }
+  @include mobile {
+    width: 100%;
+    padding: 0 10px;
   }
   &__container {
     display: flex;
@@ -15,10 +27,16 @@
   &__left {
     width: 270px;
     @include normal-desktop {
-      width: 300px;
+      width: 250px;
     }
     @include mini-desktop {
-      width: 200px;
+      width: 240px;
+    }
+    @include tablet {
+      display: none;
+    }
+    @include mobile {
+      display: none;
     }
     &__group {
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -56,15 +74,28 @@
   &__right {
     width: 1230px;
     padding: 0 0 0 10px;
+    @include large-desktop {
+      width: 1130px;
+    }
     @include normal-desktop {
-      width: 1000px;
+      width: 900px;
     }
     @include mini-desktop {
-      width: 700px;
+      width: 900px;
+    }
+    @include mobile {
+      width: 100%;
+      padding: 0;
     }
     &__video {
       width: 100% !important;
       height: 450px !important;
+      @include tablet {
+        height: 350px !important;
+      }
+      @include mobile {
+        height: 190px !important;
+      }
       video {
         object-fit: cover;
       }
@@ -80,6 +111,11 @@
         justify-content: space-between;
         width: 300px;
         height: 40px;
+        @include mobile {
+          flex-direction: column;
+          align-items: flex-start;
+          height: auto;
+        }
         h4 {
           margin: 0;
           color: $dark-red;
@@ -97,6 +133,16 @@
         width: 180px;
         height: 36px;
         border: 1px solid lightgray;
+        @include tablet {
+          width: auto;
+          height: auto;
+          border: none;
+        }
+        @include mobile {
+          width: auto;
+          height: auto;
+          border: none;
+        }
         .ant-dropdown-trigger {
           width: 100%;
           height: 100%;
@@ -105,6 +151,35 @@
           justify-content: space-between;
           padding: 0 10px;
           font-weight: 500;
+          @include tablet {
+            display: none;
+          }
+          @include mobile {
+            display: none;
+          }
+        }
+        &--filter {
+          display: none;
+          @include tablet {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 90px;
+            height: 36px;
+            font-size: 16px;
+            border-radius: 0;
+            padding: 0 10px;
+          }
+          @include mobile {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 90px;
+            height: 36px;
+            font-size: 16px;
+            border-radius: 0;
+            padding: 0 10px;
+          }
         }
       }
     }
@@ -114,18 +189,63 @@
     &__list-product {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 20px;
+      gap: 15px;
       @include normal-desktop {
         grid-template-columns: repeat(4, 1fr);
       }
       @include mini-desktop {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
+      }
+      @include tablet {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @include mobile {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
       }
     }
     &__pagination {
       margin: 20px 0 0;
       display: flex;
       justify-content: center;
+    }
+  }
+}
+
+.filter-drawer {
+  .ant-drawer-header {
+    padding: 10px !important;
+    background: linear-gradient(135deg, #3f70f5, #b83af4);
+  }
+  &__title {
+    margin: 0 !important;
+    color: $white !important;
+    i {
+      margin: 0 10px 0 0;
+    }
+  }
+  &__footer {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 10px;
+    &--cancel, &--apply {
+      padding: 5px 15px;
+      height: 40px;
+      border-radius: 0;
+      font-size: 16px;
+      border-color: $txtColor;
+      &:hover {
+        color: $txtColor !important;
+        border-color: $txtColor !important;
+      }
+    }
+    &--apply {
+      background: #0958d9;
+      border: none;
+      color: $white;
+      &:hover {
+        color: $white !important;
+      }
     }
   }
 }
