--- a/src/templates/client/style.scss
+++ b/src/templates/client/style.scss
@@ -1,3 +1,4 @@
+@use "../../scss/abstracts/" as *;
 .user-layout {
   display: flex;
   flex-direction: column;
@@ -5,7 +6,7 @@
   min-height: 100vh;
   &__back-to-top {
     position: fixed;
-    right: 5%;
+    right: 9%;
     bottom: 7%;
     background: #2087ed;
     color: #fff;
@@ -15,8 +16,20 @@
     padding: 0;
     border: none;
     border-radius: 50%;
+    z-index: 9;
     &:hover {
       color: #fff !important;
+    }
+    @include large-desktop {
+      right: 10%;
+    }
+    @include normal-desktop {
+      right: 6%;
+      bottom: 12%;
+    }
+    @include mini-desktop {
+      right: 5%;
+      bottom: 10%;
     }
   }
 }
